# helm

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  CNAME  CONTRIBUTORS  Demo.hs  LICENSE  README.md  _config.yml  circle.yml  example.hs  helm.cabal  index.html  stack.yaml
FRP/: Helm.hs
FRP/Helm/: Automaton.hs  Color.hs  Graphics.hs  Internal.hs  Joystick.hs  Keyboard.hs  Mouse.hs  Text.hs  Window.hs
_layouts/: default.html  guide.html
css/: layout.css  skeleton.min.css  solarized-light.min.css
demo/: gradients.hs
demos/: animation.hs  colors.hs  forms-and-shapes.hs  gradients.hs
demos/colors/: Main.hs  helm-demo-colors.cabal
demos/colors-osx/: SDLMain.hs  SDL_main.c  Setup.hs  helm-demo-colors-osx.cabal
demos/forms-and-shapes/: Main.hs  helm-demo-forms-and-shapes.cabal
demos/gradients/: Main.hs  helm-demo-gradients.cabal
demos/platformer/: Main.hs  helm-demo-platformer.cabal  platformer.hs
demos/text/: Main.hs  helm-demo-text.cabal
demos/transitions/: Main.hs  helm-demo-transitions.cabal
examples/flappy/: Main.hs
examples/hello/: Main.hs
guide/: colors.md  forms-and-shapes.md  forms.md  gradients.md  index.md  installing.md
js/: modernizr.min.js
src/: Helm.hs
src/FRP/: Helm.hs
src/FRP/Helm/: Animation.hs  Automaton.hs  Backend.hs  Color.hs  Engine.hs  Graphics.hs  Joystick.hs  Keyboard.hs  Mouse.hs  Random.hs  Sample.hs  Signal.hs  Text.hs  Time.hs  Transition.hs  Utilities.hs  Window.hs
src/FRP/Helm/Backend/: SDL.hs
src/FRP/Helm/Backend/SDL/: Color.hs  Engine.hs  Graphics.hs  Keyboard.hs  Mouse.hs  Text.hs  Window.hs
src/Helm/: .#Engine.hs  Asset.hs  Cmd.hs  Color.hs  Engine.hs  Game.hs  Graphics.hs  Graphics2D.hs  Keyboard.hs  Mouse.hs  Render.hs  Sub.hs  Time.hs  Window.hs
src/Helm/Engine/: SDL.hs
src/Helm/Engine/SDL/: Asset.hs  Engine.hs  Graphics2D.hs  Keyboard.hs  Mouse.hs
src/Helm/Graphics2D/: Text.hs  Transform.hs
src/Helm/Render/: Cairo.hs
test/Helm/: TimeSpec.hs
tests/: Color.hs  Keyboard.hs  Main.hs  Mouse.hs  Time.hs
