name: helm
version: 0.8.0
synopsis: A functionally reactive game engine.
description: A functionally reactive game engine, with headgear to protect you
             from the headache of game development provided.
homepage: http://github.com/switchface/helm
bug-reports: http://github.com/switchface/helm/issues
license: MIT
license-file: LICENSE
tested-with: GHC == 7.10.3
extra-source-files: LICENSE, README.md
author: Zack Corr
maintainer: Zack Corr <zack@z0w0.me>
copyright: (c) 2013-2014, Zack Corr
category: Game Engine, FRP
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/switchface/helm.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: RecordWildCards, NamedFieldPuns
  ghc-options: -Wall -fno-warn-unused-do-bind

  exposed-modules:
    FRP.Helm
    FRP.Helm.Backend
    FRP.Helm.Backend.SDL
    FRP.Helm.Backend.SDL.Color
    FRP.Helm.Backend.SDL.Engine
    FRP.Helm.Backend.SDL.Graphics
    FRP.Helm.Backend.SDL.Keyboard
    FRP.Helm.Backend.SDL.Mouse
    FRP.Helm.Backend.SDL.Text
    FRP.Helm.Backend.SDL.Window
    FRP.Helm.Random
    FRP.Helm.Sample
    FRP.Helm.Signal
    FRP.Helm.Time
    FRP.Helm.Utilities

  build-depends:
    base >= 4 && < 5,
    cairo >= 0.13 && < 0.14,
    pango >= 0.13 && < 0.14,
    containers >= 0.5 && < 1,
    elerea >= 2.7 && < 3,
    filepath >= 1.3 && < 2,
    sdl2 >= 2 && < 3,
    text >= 1.1.1.3 && < 2,
    time >= 1.4 && < 2,
    random >= 1.0.1.1 && < 1.2,
    mtl >= 2.1 && < 3,
    transformers >= 0.3.0.0 && < 0.5,
    cpu >= 0.1.2 && < 1,
    linear >= 1 && < 2

  if impl(ghc < 7.6)
    build-depends: ghc-prim

test-suite helm-tests
  type: exitcode-stdio-1.0
  x-uses-tf: true
  ghc-options: -threaded -Wall -rtsopts -O
  hs-source-dirs: tests, src
  default-language: Haskell2010
  main-is: Main.hs

  build-depends:
    base >= 4 && < 5,
    cairo >= 0.13 && < 0.14,
    containers >= 0.5 && < 1,
    HUnit >= 1.2 && < 2,
    test-framework >= 0.8 && < 1,
    test-framework-hunit >= 0.3 && < 1,
    test-framework-quickcheck2 >= 0.3 && < 1,
    time >= 1.4 && < 2,
    elerea >= 2.7 && < 3,
    sdl2 >= 2 && < 3,
    transformers >= 0.3.0.0 && < 0.5
