name: helm
version: 1.0.0
synopsis: A functionally reactive game engine.
description: A functionally reactive game engine, with headgear to protect you
             from the headache of game development provided.
homepage: http://github.com/switchface/helm
bug-reports: http://github.com/switchface/helm/issues
license: MIT
license-file: LICENSE
tested-with: GHC == 8.0.1
extra-source-files: LICENSE, README.md
author: Zack Corr
maintainer: Zack Corr <zack@z0w0.me>
copyright: (c) 2013-2014, Zack Corr
category: Game Engine, FRP
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/switchface/helm.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: RecordWildCards, NamedFieldPuns
  ghc-options: -Wall

  exposed-modules:
    Helm
    Helm.Asset
    Helm.Cmd
    Helm.Color
    Helm.Engine
    Helm.Engine.SDL
    Helm.Engine.SDL.Graphics2D
    Helm.Engine.SDL.Keyboard
    Helm.Engine.SDL.Mouse
    Helm.Graphics
    Helm.Graphics2D
    Helm.Graphics2D.Text
    Helm.Graphics2D.Transform
    Helm.Keyboard
    Helm.Mouse
    Helm.Sub
    Helm.Time
    Helm.Window

  build-depends:
    base >= 4 && < 5,
    cairo >= 0.13 && < 0.14,
    pango >= 0.13 && < 0.14,
    containers >= 0.5 && < 1,
    elerea >= 2.8 && < 3,
    sdl2 >= 2 && < 3,
    linear >= 1 && < 2,
    text >= 1.1.1.3 && < 2,
    mtl >= 2.1 && < 3,
    stm >= 2.4 && < 3,
    transformers >= 0.3.0.0 && < 0.5

  if impl(ghc < 7.6)
    build-depends: ghc-prim

executable helm-example-hello
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: examples/hello

  build-depends:
    base >= 4 && < 5,
    helm >= 1 && < 2,
    linear >= 1 && < 2

test-suite helm-tests
  type: exitcode-stdio-1.0
  x-uses-tf: true
  ghc-options: -threaded -Wall -rtsopts -O
  hs-source-dirs: tests, src
  default-language: Haskell2010
  main-is: Main.hs

  build-depends:
    base >= 4 && < 5,
    containers >= 0.5 && < 1,
    elerea >= 2.8 && < 3,
    sdl2 >= 2 && < 3,
    HUnit >= 1.2 && < 2,
    test-framework >= 0.8 && < 1,
    test-framework-hunit >= 0.3 && < 1,
    test-framework-quickcheck2 >= 0.3 && < 1
