name: helm-demo-colors
version: 0.5.0
synopsis: Renders a pizza-like colour-wheel, with each slice being a unique pre-defined color.
homepage: http://helm-engine.org/guide/colors/
tested-with: GHC == 7.6.3
license: MIT
license-file: ../../LICENSE
author: Zack Corr
maintainer: Zack Corr <zack@z0w0.me>
copyright: (c) 2013, Zack Corr
category: Game
build-type: Simple
cabal-version: >=1.10

executable helm-demo-colors-osx
  main-is: SDLMain.hs
  build-depends:
    base >= 4 && < 5,
    helm >= 0.5 && < 1
  default-language: Haskell2010
  pkgconfig-depends: sdl
  c-sources: SDL_main.c
  ghc-options: -no-hs-main -threaded -Wall -O2
