name: helm-demo-forms-and-shapes
version: 0.6.0
synopsis: WIP
homepage: http://helm-engine.org/guide/forms-and-shapes/
tested-with: GHC == 7.6.3
license: MIT
license-file: ../../LICENSE
author: Zack Corr
maintainer: Zack Corr <zack@z0w0.me>
copyright: (c) 2013, Zack Corr
category: Game
build-type: Simple
cabal-version: >=1.10

executable helm-demo-forms-and-shapes
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -threaded -Wall -O2
  
  build-depends:
    base >= 4 && < 5,
    helm >= 0.6 && < 1
